[gd_scene load_steps=6 format=3 uid="uid://baxu5fntex27g"]

[ext_resource type="Script" path="res://Enemies/Mushroom/Projectile/Projectile.gd" id="1_3qino"]
[ext_resource type="Texture2D" uid="uid://c0oee1sbvollh" path="res://Enemies/Mushroom/Projectile/ProjectileSprite.png" id="2_fhnlb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_55rkp"]

[sub_resource type="Animation" id="Animation_a23w1"]
resource_name = "explode"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y0p0p"]
_data = {
"explode": SubResource("Animation_a23w1")
}

[node name="Projectile" type="Area2D"]
z_index = 5
collision_layer = 4
collision_mask = 2
script = ExtResource("1_3qino")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_55rkp")

[node name="LifetimeTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y0p0p")
}
speed_scale = 2.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1, -1)
texture = ExtResource("2_fhnlb")
hframes = 8

[connection signal="timeout" from="LifetimeTimer" to="." method="_on_lifetime_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
